<resources>
    <string name="app_name">Lockscreen Visualizer Xposed</string>
    <string name="xposedDescription">Add CM\'s visualizer to lockscreen</string>
    <string name="antidimmer">Prevent screen from dimming</string>
    <string name="antidimmer_enabled">Lock screen won\'t dim while displaying visualizer</string>
    <string name="antidimmer_disabled">Lock screen will dim in accordance with system settings</string>
    <string name="restart_needed">You may need to restart your device in order to see changes.</string>
    <string name="about">About</string>
    <string name="about_summary">See info about this module</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="author">Author</string>
    <string name="author_content">Lawiusz</string>
    <string name="license">License</string>
    <string name="license_content">Licensed under GNU GPLv3. \nA copy of this license is available along with source code of this app.\nSome parts of the app are licensed under the Apache license.</string>
    <string name="thanks">Thanks to:</string>
    <string name="thanks_content">The CyanogenMod Project for their VisualizerView code,\nrovo89 for his awesome Xposed framework.</string>
    <string name="support">Support</string>
    <string name="xda_link">XDA link</string>
    <string name="source">Source code</string>
    <string name="github_link">https://github.com/Lawiusz/xposed_lockscreen_visualizer</string>
</resources>
